<resources>
    <string name="login_app_name">a-cc-login</string>
    <string name="str_login_in">登陆</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_usename">请输入手机号</string>
    <string name="str_register">注册</string>
    <string name="str_forget_password">忘记密码</string>

    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_username_required">This username is required</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_required">This password is required</string>
    <string name="basic_settings">设置</string>
    <string name="basic_help">帮助</string>
    <string name="basic_string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="basic_quit">退出</string>
    <string name="get_permission">"权限申请"</string>
    <string name="quit">退出</string>
    <string name="settings">去设置</string>


    <string name="title_activity_load">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="str_skip">跳过</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_certain_password">请再次输入密码</string>
    <string name="hint_verify_code">请输入验证码</string>
    <string name="str_get_verify_code">获取验证码</string>
    <string name="str_user_agreement">用户协议</string>
    <string name="get_permission_suucess">权限获取成功</string>
    <string name="error_verifycode_required">请输入验证码</string>
    <string name="error_two_password_not_equals">两次密码不一致</string>
</resources>
