<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!-- register progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/sv_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="bottom|left"
                    android:gravity="bottom|left"
                    android:text="手机号码"
                    android:textSize="@dimen/sp_18" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/actv_usename"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:gravity="left|center_vertical"
                        android:hint="@string/hint_phone"
                        android:inputType="textPhonetic"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="bottom|left"
                    android:gravity="bottom|left"
                    android:text="验证码"
                    android:textSize="@dimen/sp_18" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" >

                    <AutoCompleteTextView
                        android:id="@+id/actv_verify_code"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:gravity="left|center_vertical"
                        android:hint="@string/hint_verify_code"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btn_verify_code"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:gravity="bottom|center_vertical"
                    android:text="@string/str_get_verify_code"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="bottom|left"
                    android:gravity="bottom|left"
                    android:text="密码"
                    android:textSize="@dimen/sp_18" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <!--imeActionLabel改变输入法右下角完成按钮的文字-->
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:gravity="left|center_vertical"
                        android:hint="@string/hint_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/str_login_in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="bottom|left"
                    android:gravity="bottom|left"
                    android:text="确认密码"
                    android:textSize="@dimen/sp_18" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <!--imeActionLabel改变输入法右下角完成按钮的文字-->
                    <EditText
                        android:id="@+id/et_certain_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:gravity="left|center_vertical"
                        android:hint="@string/hint_certain_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/str_login_in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <Button
                android:id="@+id/btn_user_agreement"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:text="@string/str_user_agreement"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_register"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
